# transformer-toolkit

./: .gitignore  MUSIC_CREDITS.md  README.md  example.py  pyproject.toml  runlogger_copy.py  test.py  tokenizer.json
example/: 68-mill-basetrain.py  68m-Benchmark.ipynb  68m-inference.ipynb  68mill-sft_train.py  base_train.py  runlogger_train_example.py  sft_train.py
transformer_toolkit/: __init__.py  attention.py  block.py  c_tokenizers.py  chat_template.py  colors.py  dataloader.py  feed_forward.py  hf_hub.py  inference.py  model.py  normalization.py  positional_encodings.py  sft_dataloader.py  sft_trainer.py  trainer.py
