[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "transformer-toolkit"
version         = "0.0.33"
description     = "Minimal, modular transformer library for training your own LLM"
readme          = "README.md"
license         = { file = "LICENSE" }
requires-python = ">=3.10"
authors         = [{ name = "Govind Barbade", email="govindbarbade5@gmail.com" }]
keywords        = ["transformer", "llm", "deep learning", "nlp", "pytorch"]
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
tokenizers = ["tokenizers>=0.15.0"]
hf         = ["transformers>=4.35.0",
              "huggingface_hub>=0.20.0",
              "datasets>=2.14.0"]
all        = ["transformer-toolkit[tokenizers,hf]"]

[project.urls]
Homepage   = "https://github.com/Barbade22/transformer-toolkit"
Repository = "https://github.com/Barbade22/transformer-toolkit"

[tool.setuptools.packages.find]
where   = ["."]
include = ["transformer_toolkit*"]